event source change, fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,31 @@
 body {
-    background-color: #b0cedc;
+	background-color: #b0cedc;
 	margin: auto;
 	max-width: 700px;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	font: 14px "Century Gothic", Futura, sans-serif;
+	overflow: hidden;
+	position: fixed;
+	height: 100%;
+	width: 100%;
 }
 
-.Header{
-    /* border: 1px solid rgb(255, 0, 0); */
-    margin-top: 0px;
-    padding-top: 0px;
+.Header {
+	/* border: 1px solid rgb(255, 0, 0); */
+	margin-top: 0px;
+	padding-top: 0px;
 }
 .Footer {
-    position: absolute;
-    bottom: 0px;
-    height: 50px;
-    text-align: center;
-    align-self: flex-end; 
+	position: absolute;
+	bottom: 0px;
+	height: 50px;
+	text-align: center;
+	align-self: flex-end;
 }
 
 .Content {
-    margin-top: 10px;
+	margin-top: 10px;
 }
 
 .login-status {
